# ngraph-rs

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
ci/: install.sh  script.sh
cpp/: build.rs
examples/: add.rs  add_mul.rs  avg_pool.rs  compare.rs  computation_example.rs  concat.rs  max_pool.rs  mean_reverse.rs  min_pool.rs  mv-load.rs  mv.rs  test.rs
src/: element_type.rs  function.rs  lib.rs  node.rs  shape.rs  shape_inference.rs  shapes.rs  strides.rs
src/op/: add.rs  avg_pool.rs  concat.rs  constant.rs  less.rs  less_eq.rs  max_pool.rs  mod.rs  multiply.rs  negative.rs  parameter.rs  reduce_mean.rs
src/op/util/: attr_types.rs  mod.rs  parameter.rs
src/runtime/: backend.rs  executable.rs  mod.rs  tensor.rs
